--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Python Tests
+name: Run Python Checks
 on:
   push:
     branches:
@@ -22,3 +22,6 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests with pytest
         run: pytest
+      - name: Code style check with flake8
+          run: |
+            flake8 .
