--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Code style check with flake8
+          run: flake8 .
       - name: Run tests with pytest
         run: pytest
-      - name: Code style check with flake8
-          run: |
-            flake8 .
