--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Code style check with flake8
-          run: flake8 .
+          run: flake8
       - name: Run tests with pytest
         run: pytest
