--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas~=1.4.4
-scikit-learn~=1.1.2
+scikit-learn=1.1.2
 imblearn~=0.0
-sklearn~=0.0
+sklearn=0.0
 pytest~=7.2
 flake8~=5.0
 matplotlib~=3.5.3
