K nearest neighbor centroid to main (#12)
Co-authored-by: Niklas Kemper <65356992+Niklas-23@users.noreply.github.com>
Co-authored-by: johannzapf <johann.zapf@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ brfss_dataset/2013.csv
 brfss_dataset/2014.csv
 brfss_dataset/2015.csv
 brfss_dataset/2015_formats.json
+preprocessing/__pycache__
+__pycache__/
+*.pyc
